--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html>
     <body>
         <div class="outer-container">
-            <h1>Boozy browser</h1>
+            <h1>Boozy browser (githubz)</h1>
             <p>browser boozing<p>
             <p>You know when it's 4am, and you're doin' the pirate eye squint,<p>
             <p>trying so so so hard to click that submit button?<p>
