--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head> 
 <title>Boozy Browser -- for broozy browsing</title>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" type="text/javascript"></script>
-<script type="text/javascript" src="static/js/boozybrowser.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" type="text/javascript"></script>
 
-<link type="text/css" rel="stylesheet" href="static/css/boozybrowser.css">
+<script type="text/javascript" src="media/js/boozybrowser.js"></script>
+
+<link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
 
 </head>
 <html>
@@ -14,13 +15,9 @@
         <div class="outer-container">
             <h1>Boozy browser (linodeeee)</h1>
             <p>browser boozing<p>
-            <p>You know when it's 4am, and you're doin' the pirate eye squint,<p>
-            <p>trying so so so hard to click that submit button?<p>
             <p>(just doing this with random numbers, so refresh and see if you can hit submit a few times in a row)</p>
 
-
-
-            <h3>Do it, type whatever you want, and when you like what you've typed, hit submit</h3>
+            <h3>Type some shit then try to hit submit.</h3>
             <span class="typin select-none float-left" id="top" >
                 <textarea rows="5" cols="33"></textarea>
             </span>
@@ -29,14 +26,6 @@
                 <span class="button float-left select-none" id="submit" click-message="YESSSS you got the submit! Finally!!!">submit</span>
                 <span class="button float-left select-none" id="lawl" click-message="lololololol">lawlz</span>
             </span>
-            <div class="pix float-left clear-left" id="bottom" ></div>
-            <img class="pic-views" src="https://logs.loggly.com/inputs/f33fe6e6-ca9c-4226-9907-ba9d6bb740c6.gif?browser=wasted" />
        </div>
-
-        <!--<div id="preload">
-           <img src="" width="1" height="1" />
-        </div>-->
     </body>
 </html>
-
-
