--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <script type="text/javascript" src="media/js/boozybrowser.js"></script>
 
+<link type="text/css" rel="stylesheet" href="media/css/utils.css">
 <link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
 
 </head>
