workin on my lean, pushin cause I gotsta leave

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
 <head> 
-<title>Boozy Browser -- for broozy browsing</title>
+    <title>Boozy Browser -- for broozy browsing</title>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" type="text/javascript"></script>
+    <link type="text/css" rel="stylesheet" href="media/css/utils.css">
+    <link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
 
-<script type="text/javascript" src="media/js/boozybrowser.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" type="text/javascript"></script>
 
-<link type="text/css" rel="stylesheet" href="media/css/utils.css">
-<link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
+    <script type="text/javascript" src="media/js/boozybrowser.js"></script>
 
 </head>
 <html>
     <body>
         <div class="outer-container">
-            <h1>Boozy browser (linodeeee)</h1>
+            <h1>Boozy browser</h1>
             <p>browser boozing<p>
             <p>(just doing this with random numbers, so refresh and see if you can hit submit a few times in a row)</p>
 
