add underscore for convenience
* change init to starrt
* call stop before start to ensure no unintended stacking
* updating some MD for keeping drunk tier classifications

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" type="text/javascript"></script>
+    <script type="text/javascript" src="media/js/lib/underscore-min.js"></script>
 
     <script type="text/javascript" src="media/js/boozybrowser.js"></script>
 
@@ -15,10 +16,7 @@
     <body>
         <div class="outer-container">
             <h1>Boozy browser</h1>
-            <p>browser boozing<p>
-            <p>(just doing this with random numbers, so refresh and see if you can hit submit a few times in a row)</p>
 
-            <h3>Type some shit then try to hit submit.</h3>
             <span class="typin select-none float-left" id="top" >
                 <textarea rows="5" cols="33"></textarea>
             </span>
