some separation of boozy controls and boozy functions for the plugin

--- a/boozy-chrome/popup.html
+++ b/boozy-chrome/popup.html
@@ -1,9 +1,99 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Getting Started Extension's Popup wwoorrrd</title>
-  </head>
+    <head>
+        <title>Boozy Browsin</title>
+        <link type="text/css" rel="stylesheet" href="boozy-controls.css">
+    </head>
 <body>
   <h1>Get Drunk!</h1>
+    <div class="boozy-menu">
+        <h2 class="title font float-left">Boozy Browsin</h2>
+        <div class="hide font float-right cursor-pointer">x</div>
+        <div class="clear-both"></div>
+        <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
+            <div class="title font float-left">
+                Bulk
+            </div>
+            <div class="switch float-right">
+                <select class="drunk-level float-left">
+                    <option value="sober">sober</option>
+                    <option value="buzzed">buzzed</option>
+                    <option value="im-fine">I'm fine</option>
+                    <option value="drunk">drunk</option>
+                    <option value="wooo">wooo!</option>
+                    <option value="blackout">blackout</option> 
+                </select>
+            </div>
+        </div>
+        <div class="clear-both"></div>
+        <div class="controls-container display-inline-block divider-top">
+            <div id="lean" class="control cursor-pointer display-inline-block">
+                <div class="title font float-left">
+                    Lean
+                </div>
+                <div class="switch float-right">
+                    <select class="drunk-level single-control float-left">
+                        <option value="sober">sober</option>
+                        <option value="buzzed">buzzed</option>
+                        <option value="im-fine">I\m fine</option>
+                        <option value="drunk">drunk</option>
+                        <option value="wooo">wooo!</option>
+                        <option value="blackout">blackout</option> 
+                    </select>
+                </div>
+            </div>
+            <div class="clear-both"></div>
+            <div id="focus" class="control cursor-pointer display-inline-block">
+                <div class="title font float-left">
+                    Focus
+                </div>
+                <div class="switch float-right">
+                    <select class="drunk-level single-control float-left">
+                        <option value="sober">sober</option>
+                        <option value="buzzed">buzzed</option>
+                        <option value="im-fine">I\m fine</option>
+                        <option value="drunk">drunk</option>
+                        <option value="wooo">wooo!</option>
+                        <option value="blackout">blackout</option> 
+                    </select>
+                </div>
+            </div>
+            <div class="clear-both"></div>
+            <div id="buttons" class="control cursor-pointer display-inline-block">
+                <div class="title font float-left">
+                    Buttons
+                </div>
+                <div class="switch float-right">
+                    <select class="drunk-level single-control float-left">
+                        <option value="sober">sober</option>
+                        <option value="buzzed">buzzed</option>
+                        <option value="im-fine">I'm fine</option>
+                        <option value="drunk">drunk</option>
+                        <option value="wooo">wooo!</option>
+                        <option value="blackout">blackout</option> 
+                    </select>
+                </div>
+            </div>
+            <div class="clear-both"></div>
+            <div id="keys" class="control cursor-pointer display-inline-block">
+                <div class="title font float-left">
+                    Keys
+                </div>
+                <div class="switch float-right">
+                    <select class="drunk-level single-control float-left">
+                        <option value="sober">sober</option>
+                        <option value="buzzed">buzzed</option>
+                        <option value="im-fine">I\m fine</option>
+                        <option value="drunk">drunk</option>
+                        <option value="wooo">wooo!</option>
+                        <option value="blackout">blackout</option> 
+                    </select>
+                </div>
+            </div>
+            <div class="clear-both"></div>
+        </div>
+        <div class="clear-both"></div>
+        <div class="show font float-right cursor-pointer fade-out">open</div>
+    </div>
 </body>
 </html>
