--- a/boozy-chrome/popup.html
+++ b/boozy-chrome/popup.html
@@ -3,6 +3,10 @@
     <head>
         <title>Boozy Browsin</title>
         <link type="text/css" rel="stylesheet" href="boozy-controls.css">
+        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="underscore-min.js"></script>
+
+        <script type="text/javascript" src="boozy-controls.js"></script>
     </head>
 <body>
     <div class="boozy-menu">
