--- a/boozy-chrome/popup.html
+++ b/boozy-chrome/popup.html
@@ -3,7 +3,7 @@
     <head>
         <title>Boozy Browsin</title>
         <link type="text/css" rel="stylesheet" href="boozy-controls.css">
-        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="jquery-2.1.0.min.js"></script>
         <script type="text/javascript" src="underscore-min.js"></script>
 
         <script type="text/javascript" src="boozy-controls.js"></script>
