attempt at organizing these files

--- a/boozy-chrome/html/popup.html
+++ b/boozy-chrome/html/popup.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Boozy Browsin</title>
-        <link type="text/css" rel="stylesheet" href="boozy-controls.css">
-        <script type="text/javascript" src="jquery-2.1.0.min.js"></script>
-        <script type="text/javascript" src="underscore-min.js"></script>
+        <link type="text/css" rel="stylesheet" href="css/boozy-controls.css">
+        <script type="text/javascript" src="js/lib/jquery-2.1.0.min.js"></script>
+        <script type="text/javascript" src="js/lib/underscore-min.js"></script>
 
-        <script type="text/javascript" src="boozy-controls.js"></script>
+        <script type="text/javascript" src="js/boozy-controls.js"></script>
     </head>
 <body>
     <div class="boozy-menu">
