fix \ copy and set popup.html to point to correct spot

--- a/boozy-chrome/html/popup.html
+++ b/boozy-chrome/html/popup.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Boozy Browsin</title>
-        <link type="text/css" rel="stylesheet" href="css/boozy-controls.css">
-        <script type="text/javascript" src="js/lib/jquery-2.1.0.min.js"></script>
-        <script type="text/javascript" src="js/lib/underscore-min.js"></script>
+        <link type="text/css" rel="stylesheet" href="/css/boozy-controls.css">
+        <script type="text/javascript" src="/js/lib/jquery-2.1.0.min.js"></script>
+        <script type="text/javascript" src="/js/lib/underscore-min.js"></script>
 
-        <script type="text/javascript" src="js/boozy-controls.js"></script>
+        <script type="text/javascript" src="/js/boozy-controls.js"></script>
     </head>
 <body>
     <div class="boozy-menu">
@@ -37,7 +37,7 @@
                     <select class="drunk-level single-control float-left">
                         <option value="sober">sober</option>
                         <option value="buzzed">buzzed</option>
-                        <option value="im-fine">I\m fine</option>
+                        <option value="im-fine">I'm fine</option>
                         <option value="drunk">drunk</option>
                         <option value="wooo">wooo!</option>
                         <option value="blackout">blackout</option> 
@@ -53,7 +53,7 @@
                     <select class="drunk-level single-control float-left">
                         <option value="sober">sober</option>
                         <option value="buzzed">buzzed</option>
-                        <option value="im-fine">I\m fine</option>
+                        <option value="im-fine">I'm fine</option>
                         <option value="drunk">drunk</option>
                         <option value="wooo">wooo!</option>
                         <option value="blackout">blackout</option> 
@@ -85,7 +85,7 @@
                     <select class="drunk-level single-control float-left">
                         <option value="sober">sober</option>
                         <option value="buzzed">buzzed</option>
-                        <option value="im-fine">I\m fine</option>
+                        <option value="im-fine">I'm fine</option>
                         <option value="drunk">drunk</option>
                         <option value="wooo">wooo!</option>
                         <option value="blackout">blackout</option> 
