first droplet commit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- keep this menu outside of html so it can stay sober -->
 <script type="text/tempalte" id="boozy-menu-template">
     <div class="boozy-menu">
-        <h2 class="title font float-left">Boozy Browsin</h2>
+        <h2 class="title font float-left">Boozy Browsin from a droplet</h2>
         <div class="hide font float-right cursor-pointer">x</div>
         <div class="clear-both"></div>
         <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
