add github linx for fawxy forxing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <html>
     <body>
         <div class="outer-container">
-            <h1>Boozy browser</h1>
+            <h1 class="float-left">Boozy browser</h1>
+            <a class="float-left" href="https://github.com/brainTrain/boozybrowser" target="_blank">Fork me, all day and all night</a>
+            <div class="clear-both"></div>
             <p>boozy browsin from a droplet</p>
             <span class="typin select-none float-left" id="top" >
                 <textarea rows="5" cols="33"></textarea>
