update git ignore, use the compass reset

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head> 
     <title>Boozy Browser -- for broozy browsing</title>
 
+    <link type="text/css" rel="stylesheet" href="media/css/screen.css">
     <link type="text/css" rel="stylesheet" href="media/css/utils.css">
     <link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
 
