--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="media/js/lib/underscore-min.js"></script>
 
     <script type="text/javascript" src="media/js/boozybrowser.js"></script>
+    <script type="text/javascript" src="media/js/boozydemo.js"></script>
 
 </head>
 <html>
