--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 
     <link type="text/css" rel="stylesheet" href="media/css/screen.css">
     <link type="text/css" rel="stylesheet" href="media/css/utils.css">
+    <link type="text/css" rel="stylesheet" href="media/font-awesome/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="media/js/lib/jquery-ui-1.11.1.custom/jquery-ui.min.js"></script>
     <script type="text/javascript" src="media/js/lib/underscore-min.js"></script>
 
     <script type="text/javascript" src="media/js/boozybrowser.js"></script>
@@ -35,32 +37,24 @@
 <!-- keep this menu outside of html so it can stay sober -->
 <script type="text/tempalte" id="boozy-menu-template">
     <div class="boozy-menu">
-        <h2 class="title font float-left">Boozy Browsin</h2>
-        <div class="hide font float-right cursor-pointer">x</div>
-        <div class="clear-both"></div>
-        <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
-            <div class="title font float-left">
-                Bulk
-            </div>
-            <div class="switch float-right">
-                <select class="drunk-level float-left">
-                    <option value="sober">sober</option>
-                    <option value="buzzed">buzzed</option>
-                    <option value="im-fine">I'm fine</option>
-                    <option value="drunk">drunk</option>
-                    <option value="wooo">wooo!</option>
-                    <option value="blackout">blackout</option> 
-                </select>
-            </div>
+        <div class="menu-header">
+            <h2 class="title font float-left">Boozy Browsin</h2>
+            <div class="hide font float-right cursor-pointer">x</div>
+            <a class="title font float-right cursor-pointer">advanced</a>
+            <div class="clear-both"></div>
         </div>
-        <div class="clear-both"></div>
-        <div class="controls-container display-inline-block divider-top">
-            <div id="lean" class="control cursor-pointer display-inline-block">
+        <div id="bar" class="menu-controls">
+            <i class="so-drag fa fa-glass cursor-pointer float-left"></i>
+            <i class="so-drag fa fa-coffee cursor-pointer float-left"></i>
+            <div class="so-drop boozy-computer"></div>
+        </div>
+        <div id="settings" class="menu-controls display-none">
+            <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
                 <div class="title font float-left">
-                    Lean
+                    Bulk
                 </div>
                 <div class="switch float-right">
-                    <select class="drunk-level single-control float-left">
+                    <select class="drunk-level float-left">
                         <option value="sober">sober</option>
                         <option value="buzzed">buzzed</option>
                         <option value="im-fine">I'm fine</option>
@@ -71,54 +65,72 @@
                 </div>
             </div>
             <div class="clear-both"></div>
-            <div id="focus" class="control cursor-pointer display-inline-block">
-                <div class="title font float-left">
-                    Focus
+            <div class="controls-container display-inline-block divider-top">
+                <div id="lean" class="control cursor-pointer display-inline-block">
+                    <div class="title font float-left">
+                        Lean
+                    </div>
+                    <div class="switch float-right">
+                        <select class="drunk-level single-control float-left">
+                            <option value="sober">sober</option>
+                            <option value="buzzed">buzzed</option>
+                            <option value="im-fine">I'm fine</option>
+                            <option value="drunk">drunk</option>
+                            <option value="wooo">wooo!</option>
+                            <option value="blackout">blackout</option> 
+                        </select>
+                    </div>
                 </div>
-                <div class="switch float-right">
-                    <select class="drunk-level single-control float-left">
-                        <option value="sober">sober</option>
-                        <option value="buzzed">buzzed</option>
-                        <option value="im-fine">I'm fine</option>
-                        <option value="drunk">drunk</option>
-                        <option value="wooo">wooo!</option>
-                        <option value="blackout">blackout</option> 
-                    </select>
+                <div class="clear-both"></div>
+                <div id="focus" class="control cursor-pointer display-inline-block">
+                    <div class="title font float-left">
+                        Focus
+                    </div>
+                    <div class="switch float-right">
+                        <select class="drunk-level single-control float-left">
+                            <option value="sober">sober</option>
+                            <option value="buzzed">buzzed</option>
+                            <option value="im-fine">I'm fine</option>
+                            <option value="drunk">drunk</option>
+                            <option value="wooo">wooo!</option>
+                            <option value="blackout">blackout</option> 
+                        </select>
+                    </div>
                 </div>
+                <div class="clear-both"></div>
+                <div id="buttons" class="control cursor-pointer display-inline-block">
+                    <div class="title font float-left">
+                        Buttons
+                    </div>
+                    <div class="switch float-right">
+                        <select class="drunk-level single-control float-left">
+                            <option value="sober">sober</option>
+                            <option value="buzzed">buzzed</option>
+                            <option value="im-fine">I'm fine</option>
+                            <option value="drunk">drunk</option>
+                            <option value="wooo">wooo!</option>
+                            <option value="blackout">blackout</option> 
+                        </select>
+                    </div>
+                </div>
+                <div class="clear-both"></div>
+                <div id="keys" class="control cursor-pointer display-inline-block">
+                    <div class="title font float-left">
+                        Keys
+                    </div>
+                    <div class="switch float-right">
+                        <select class="drunk-level single-control float-left">
+                            <option value="sober">sober</option>
+                            <option value="buzzed">buzzed</option>
+                            <option value="im-fine">I'm fine</option>
+                            <option value="drunk">drunk</option>
+                            <option value="wooo">wooo!</option>
+                            <option value="blackout">blackout</option> 
+                        </select>
+                    </div>
+                </div>
+                <div class="clear-both"></div>
             </div>
-            <div class="clear-both"></div>
-            <div id="buttons" class="control cursor-pointer display-inline-block">
-                <div class="title font float-left">
-                    Buttons
-                </div>
-                <div class="switch float-right">
-                    <select class="drunk-level single-control float-left">
-                        <option value="sober">sober</option>
-                        <option value="buzzed">buzzed</option>
-                        <option value="im-fine">I'm fine</option>
-                        <option value="drunk">drunk</option>
-                        <option value="wooo">wooo!</option>
-                        <option value="blackout">blackout</option> 
-                    </select>
-                </div>
-            </div>
-            <div class="clear-both"></div>
-            <div id="keys" class="control cursor-pointer display-inline-block">
-                <div class="title font float-left">
-                    Keys
-                </div>
-                <div class="switch float-right">
-                    <select class="drunk-level single-control float-left">
-                        <option value="sober">sober</option>
-                        <option value="buzzed">buzzed</option>
-                        <option value="im-fine">I'm fine</option>
-                        <option value="drunk">drunk</option>
-                        <option value="wooo">wooo!</option>
-                        <option value="blackout">blackout</option> 
-                    </select>
-                </div>
-            </div>
-            <div class="clear-both"></div>
         </div>
         <div class="clear-both"></div>
         <div class="show font float-right cursor-pointer fade-out">open</div>
