let there be dragging of drinks into boxy things!!!!

--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
             <div class="clear-both"></div>
         </div>
         <div id="bar" class="menu-controls">
-            <i class="so-drag fa fa-glass cursor-pointer float-left"></i>
-            <i class="so-drag fa fa-coffee cursor-pointer float-left"></i>
-            <div class="so-drop boozy-computer"></div>
+            <div class="drink-container">
+                <i id="martini" class="so-drag fa fa-glass cursor-pointer float-left"></i>
+                <i id="coffee" class="so-drag fa fa-coffee cursor-pointer float-left"></i>
+            </div>
+            <div class="clear-both"></div>
+            <div class="boozy-computer so-drop float-left"></div>
         </div>
         <div id="settings" class="menu-controls display-none">
             <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
