a dusting of responsive shit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="media/js/lib/jquery-ui-1.11.1.custom/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="media/js/lib/jquery.ui.touch-punch.min.js"></script>
     <script type="text/javascript" src="media/js/lib/underscore-min.js"></script>
 
     <script type="text/javascript" src="media/js/boozybrowser.js"></script>
