--- a/index.html
+++ b/index.html
@@ -46,11 +46,15 @@
         </div>
         <div id="bar" class="menu-controls">
             <div class="drink-container">
-                <i id="martini" class="so-drag fa fa-glass cursor-pointer float-left"></i>
-                <i id="coffee" class="so-drag fa fa-coffee cursor-pointer float-left"></i>
+                <div id="martini-koozie" class="drink-koozie">
+                    <i id="martini" class="drink fa fa-glass cursor-pointer float-left"></i>
+                </div>
+                <div id="coffee-koozie" class="drink-koozie">
+                    <i id="coffee" class="drink fa fa-coffee cursor-pointer float-left"></i>
+                </div>
             </div>
             <div class="clear-both"></div>
-            <div class="boozy-computer so-drop float-left"></div>
+            <div class="boozy-computer float-left"></div>
         </div>
         <div id="settings" class="menu-controls display-none">
             <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
