--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <link type="text/css" rel="stylesheet" href="media/css/boozybrowser.css">
 
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <!-- alright, time for some angualarz -->
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.2/angular.min.js"></script>
+
     <script type="text/javascript" src="media/js/lib/jquery-ui-1.11.1.custom/jquery-ui.min.js"></script>
     <script type="text/javascript" src="media/js/lib/jquery.ui.touch-punch.min.js"></script>
     <script type="text/javascript" src="media/js/lib/underscore-min.js"></script>
 
     <script type="text/javascript" src="media/js/boozybrowser.js"></script>
     <script type="text/javascript" src="media/js/boozydemo.js"></script>
+    <!-- moar angualarz -->
+    <script type="text/javascript" src="media/js/boozydemo/app.js"></script>
+    <!-- bar stuffs -->
+    <script type="text/javascript" src="media/js/boozydemo/bar/services.js"></script>
+    <script type="text/javascript" src="media/js/boozydemo/bar/controllers.js"></script>
+    <script type="text/javascript" src="media/js/boozydemo/bar/directives.js"></script>
 
 </head>
 <html>
@@ -54,7 +63,7 @@
                 </div>
             </div>
             <div class="clear-both"></div>
-            <div class="boozy-computer float-left"></div>
+            <div class="boozy-computer float-left">drag here to drink</div>
         </div>
         <div id="advanced-menu" class="menu-controls display-none">
             <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
