lil angular and boozydemo.js dependencies right now
* I'll fix some other time, got this sucker end to end though!

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <script type="text/javascript" src="media/js/boozydemo.js"></script>
     <!-- moar angualarz -->
     <script type="text/javascript" src="media/js/boozydemo/app.js"></script>
-    <!-- angualar plugins -->
-    <script type="text/javascript" src="media/js/boozydemo/ngDraggable.js"></script>
     <!-- bar stuffs -->
     <script type="text/javascript" src="media/js/boozydemo/bar/services.js"></script>
     <script type="text/javascript" src="media/js/boozydemo/bar/controllers.js"></script>
@@ -48,7 +46,7 @@
 </html>
 <!-- keep this menu outside of html so it can stay sober -->
 <script type="text/tempalte" id="boozy-menu-template">
-    <div class="boozy-menu">
+    <div class="boozy-menu"  ng-app="boozyDemo">
         <div class="menu-header">
             <h2 id="bar" class="title nav active font float-left">Boozy Browsin</h2>
             <h2 id="advanced" class="title nav font float-left cursor-pointer">advanced</h2>
@@ -58,28 +56,28 @@
         <div id="bar-menu" class="menu-controls">
             <div class="drink-container">
                 <div id="martini-koozie" class="drink-koozie">
-                    <i 
-                        ng-drag="true" 
-                        ng-drag-data="{
+                    <drink
+                        class="drink booze fa fa-glass cursor-pointer float-left"
+                        ng-drink-data="{
                             'name': 'martini', 
                             'intoxicant': 'booze'
                         }"
                         id="martini" 
-                        class="drink booze fa fa-glass cursor-pointer float-left"></i>
+                        ></drink>
                 </div>
                 <div id="coffee-koozie" class="drink-koozie">
-                    <i 
-                        ng-drag="true" 
-                        ng-drag-data="{
+                    <drink 
+                        class="drink caffine fa fa-coffee cursor-pointer float-left"
+                        ng-drink-data="{
                             'name': 'coffee', 
                             'intoxicant': 'caffine'
                         }" 
                         id="coffee" 
-                        class="drink caffine fa fa-coffee cursor-pointer float-left"></i>
+                        ></drink>
                 </div>
             </div>
             <div class="clear-both"></div>
-            <div class="boozy-computer float-left">drag here to drink</div>
+            <browser class="boozy-computer float-left">drag here to drink</browser>
         </div>
         <div id="advanced-menu" class="menu-controls display-none">
             <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
