--- a/index.html
+++ b/index.html
@@ -46,128 +46,130 @@
 </html>
 <!-- keep this menu outside of html so it can stay sober -->
 <script type="text/tempalte" id="boozy-menu-template">
-    <div class="boozy-menu"  ng-app="boozyDemo">
-        <div class="menu-header">
-            <h2 id="bar" class="title nav active font float-left">Boozy Browsin</h2>
-            <h2 id="advanced" class="title nav font float-left cursor-pointer">advanced</h2>
-            <div class="hide font float-right cursor-pointer">x</div>
-            <div class="clear-both"></div>
-        </div>
-        <div id="bar-menu" class="menu-controls" ng-controller="bar">
-            <div class="drink-container">
-                <div id="martini-koozie" class="drink-koozie">
-                    <drink
-                        class="drink booze fa fa-glass cursor-pointer float-left"
-                        data-drink='{
-                            "name": "martini", 
-                            "intoxicant": "booze"
-                        }'
-                        id="martini" 
-                        ></drink>
+    <div class="boozy-menu-wrapper"  ng-app="boozyDemo">
+        <div class="boozy-menu" ng-controller="bar" ng-class="{'hide-menu': hideMenu == true}">
+            <div class="menu-header" ng-init="currentMenu = 'browser'">
+                <h2 id="bar" class="title nav font float-left cursor-pointer" ng-class="{'active': currentMenu == 'browser'}" ng-click="currentMenu = 'browser'">Boozy Browsin</h2>
+                <h2 id="advanced" class="title nav font float-left cursor-pointer" ng-class="{'active': currentMenu == 'advanced'}"  ng-click="currentMenu = 'advanced'">advanced</h2>
+                <div class="hide font float-right cursor-pointer" ng-click="hideMenu = true">x</div>
+                <div class="clear-both"></div>
+            </div>
+            <div id="bar-menu" class="menu-controls" ng-show="currentMenu == 'browser'">
+                <div class="drink-container">
+                    <div id="martini-koozie" class="drink-koozie">
+                        <drink
+                            class="drink booze fa fa-glass cursor-pointer float-left"
+                            data-drink='{
+                                "name": "martini", 
+                                "intoxicant": "booze"
+                            }'
+                            id="martini" 
+                            ></drink>
+                    </div>
+                    <div id="coffee-koozie" class="drink-koozie">
+                        <drink 
+                            class="drink caffine fa fa-coffee cursor-pointer float-left"
+                            data-drink='{
+                                "name": "coffee", 
+                                "intoxicant": "caffine"
+                            }'
+                            id="coffee" 
+                            ></drink>
+                    </div>
                 </div>
-                <div id="coffee-koozie" class="drink-koozie">
-                    <drink 
-                        class="drink caffine fa fa-coffee cursor-pointer float-left"
-                        data-drink='{
-                            "name": "coffee", 
-                            "intoxicant": "caffine"
-                        }'
-                        id="coffee" 
-                        ></drink>
+                <div class="clear-both"></div>
+                <browser class="boozy-computer float-left">drag here to drink</browser>
+            </div>
+            <div id="advanced-menu" class="menu-controls" ng-show="currentMenu == 'advanced'">
+                <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
+                    <div class="title font float-left">
+                        Bulk
+                    </div>
+                    <div class="switch float-right">
+                        <select class="drunk-level float-left">
+                            <option value="sober">sober</option>
+                            <option value="buzzed">buzzed</option>
+                            <option value="im-fine">I'm fine</option>
+                            <option value="drunk">drunk</option>
+                            <option value="wooo">wooo!</option>
+                            <option value="blackout">blackout</option> 
+                        </select>
+                    </div>
+                </div>
+                <div class="clear-both"></div>
+                <div class="controls-container display-inline-block divider-top">
+                    <div id="lean" class="control cursor-pointer display-inline-block">
+                        <div class="title font float-left">
+                            Lean
+                        </div>
+                        <div class="switch float-right">
+                            <select class="drunk-level single-control float-left">
+                                <option value="sober">sober</option>
+                                <option value="buzzed">buzzed</option>
+                                <option value="im-fine">I'm fine</option>
+                                <option value="drunk">drunk</option>
+                                <option value="wooo">wooo!</option>
+                                <option value="blackout">blackout</option> 
+                            </select>
+                        </div>
+                    </div>
+                    <div class="clear-both"></div>
+                    <div id="focus" class="control cursor-pointer display-inline-block">
+                        <div class="title font float-left">
+                            Focus
+                        </div>
+                        <div class="switch float-right">
+                            <select class="drunk-level single-control float-left">
+                                <option value="sober">sober</option>
+                                <option value="buzzed">buzzed</option>
+                                <option value="im-fine">I'm fine</option>
+                                <option value="drunk">drunk</option>
+                                <option value="wooo">wooo!</option>
+                                <option value="blackout">blackout</option> 
+                            </select>
+                        </div>
+                    </div>
+                    <div class="clear-both"></div>
+                    <div id="buttons" class="control cursor-pointer display-inline-block">
+                        <div class="title font float-left">
+                            Buttons
+                        </div>
+                        <div class="switch float-right">
+                            <select class="drunk-level single-control float-left">
+                                <option value="sober">sober</option>
+                                <option value="buzzed">buzzed</option>
+                                <option value="im-fine">I'm fine</option>
+                                <option value="drunk">drunk</option>
+                                <option value="wooo">wooo!</option>
+                                <option value="blackout">blackout</option> 
+                            </select>
+                        </div>
+                    </div>
+                    <div class="clear-both"></div>
+                    <div id="keys" class="control cursor-pointer display-inline-block">
+                        <div class="title font float-left">
+                            Keys
+                        </div>
+                        <div class="switch float-right">
+                            <select class="drunk-level single-control float-left">
+                                <option value="sober">sober</option>
+                                <option value="buzzed">buzzed</option>
+                                <option value="im-fine">I'm fine</option>
+                                <option value="drunk">drunk</option>
+                                <option value="wooo">wooo!</option>
+                                <option value="blackout">blackout</option> 
+                            </select>
+                        </div>
+                    </div>
+                    <div class="clear-both"></div>
                 </div>
             </div>
             <div class="clear-both"></div>
-            <browser class="boozy-computer float-left">drag here to drink</browser>
-        </div>
-        <div id="advanced-menu" class="menu-controls display-none">
-            <div id="bulk" class="control cursor-pointer display-inline-block divider-bottom">
-                <div class="title font float-left">
-                    Bulk
-                </div>
-                <div class="switch float-right">
-                    <select class="drunk-level float-left">
-                        <option value="sober">sober</option>
-                        <option value="buzzed">buzzed</option>
-                        <option value="im-fine">I'm fine</option>
-                        <option value="drunk">drunk</option>
-                        <option value="wooo">wooo!</option>
-                        <option value="blackout">blackout</option> 
-                    </select>
-                </div>
+            <div class="menu-footer">
+                <h2 class="float-left">Drunkenness: </h2>
+                <p class="float-left">{{ currentDrunkLevel }}</p>
             </div>
-            <div class="clear-both"></div>
-            <div class="controls-container display-inline-block divider-top">
-                <div id="lean" class="control cursor-pointer display-inline-block">
-                    <div class="title font float-left">
-                        Lean
-                    </div>
-                    <div class="switch float-right">
-                        <select class="drunk-level single-control float-left">
-                            <option value="sober">sober</option>
-                            <option value="buzzed">buzzed</option>
-                            <option value="im-fine">I'm fine</option>
-                            <option value="drunk">drunk</option>
-                            <option value="wooo">wooo!</option>
-                            <option value="blackout">blackout</option> 
-                        </select>
-                    </div>
-                </div>
-                <div class="clear-both"></div>
-                <div id="focus" class="control cursor-pointer display-inline-block">
-                    <div class="title font float-left">
-                        Focus
-                    </div>
-                    <div class="switch float-right">
-                        <select class="drunk-level single-control float-left">
-                            <option value="sober">sober</option>
-                            <option value="buzzed">buzzed</option>
-                            <option value="im-fine">I'm fine</option>
-                            <option value="drunk">drunk</option>
-                            <option value="wooo">wooo!</option>
-                            <option value="blackout">blackout</option> 
-                        </select>
-                    </div>
-                </div>
-                <div class="clear-both"></div>
-                <div id="buttons" class="control cursor-pointer display-inline-block">
-                    <div class="title font float-left">
-                        Buttons
-                    </div>
-                    <div class="switch float-right">
-                        <select class="drunk-level single-control float-left">
-                            <option value="sober">sober</option>
-                            <option value="buzzed">buzzed</option>
-                            <option value="im-fine">I'm fine</option>
-                            <option value="drunk">drunk</option>
-                            <option value="wooo">wooo!</option>
-                            <option value="blackout">blackout</option> 
-                        </select>
-                    </div>
-                </div>
-                <div class="clear-both"></div>
-                <div id="keys" class="control cursor-pointer display-inline-block">
-                    <div class="title font float-left">
-                        Keys
-                    </div>
-                    <div class="switch float-right">
-                        <select class="drunk-level single-control float-left">
-                            <option value="sober">sober</option>
-                            <option value="buzzed">buzzed</option>
-                            <option value="im-fine">I'm fine</option>
-                            <option value="drunk">drunk</option>
-                            <option value="wooo">wooo!</option>
-                            <option value="blackout">blackout</option> 
-                        </select>
-                    </div>
-                </div>
-                <div class="clear-both"></div>
-            </div>
+            <div class="font float-right cursor-pointer" ng-show="hideMenu == true" ng-click="hideMenu = false">open</div>
         </div>
-        <div class="clear-both"></div>
-        <div class="menu-footer">
-            <h2 class="pull-left">Drunkenness:</h2>
-            <p class="drunk-level"></p>
-        </div>
-        <div class="show font float-right cursor-pointer fade-out">open</div>
     </div>
 </script>
