calling my init file boozybutt just cause

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="media/js/lib/underscore-min.js"></script>
 
     <script type="text/javascript" src="media/js/boozybrowser.js"></script>
-    <script type="text/javascript" src="media/js/boozydemo.js"></script>
+    <script type="text/javascript" src="media/js/boozybutt.js"></script>
     <!-- moar angualarz -->
     <script type="text/javascript" src="media/js/boozydemo/app.js"></script>
     <!-- bar stuffs -->
