--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                     <div class="switch float-right">
                         <select 
                             class="drunk-level float-left" 
-                            ng-model="currentDrunkLevel['{{ selectType }}']" 
+                            ng-model="{{ selectType }}" 
                             ng-options="browserState for browserState in browserStates track by browserState"
-                            ng-change="changeDropDown('{{ selectType }}', currentDrunkLevel['{{ selectType }}'])"
+                            ng-change="changeDropDown('{{ selectType }}', {{ selectType }})"
                         >
                             <option>--</option>
                         </select>
