--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="switch float-right">
                         <select 
                             class="drunk-level float-left" 
-                            ng-model="currentDrunkLevel['{{ selectType }}']" 
+                            ng-model="currentDrunkLevel[selectType]" 
                             ng-options="browserState for browserState in browserStates track by browserState"
                             ng-change="changeDropDown('{{ selectType }}', currentDrunkLevel['{{ selectType }}'])"
                         >
