hook up BAC to make browser more/less drunk as it drinks! \o/
* scoping issue with the this.BAC that I need to fix
* manually setting intoxication level works but throws errors on demo, gotta fix that too

--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
                             class="drink booze fa fa-glass cursor-pointer float-left"
                             data-drink='{
                                 "name": "martini", 
-                                "intoxicant": "booze"
+                                "strength": 2
                             }'
                             id="martini" 
-                            ></drink>
+                        ></drink>
                     </div>
                     <div id="coffee-koozie" class="drink-koozie">
                         <drink 
                             class="drink caffine fa fa-coffee cursor-pointer float-left"
                             data-drink='{
                                 "name": "coffee", 
-                                "intoxicant": "caffine"
+                                "strength": -1
                             }'
                             id="coffee" 
-                            ></drink>
+                        ></drink>
                     </div>
                 </div>
                 <div class="clear-both"></div>
