--- a/index.html
+++ b/index.html
@@ -69,21 +69,13 @@
                     <div id="martini-koozie" class="drink-koozie">
                         <drink
                             class="drink booze fa fa-glass cursor-pointer float-left"
-                            data-drink='{
-                                "name": "martini", 
-                                "strength": 2
-                            }'
-                            id="martini" 
+                            data-drink='{ "name": "martini", "strength": 2 }'
                         ></drink>
                     </div>
                     <div id="coffee-koozie" class="drink-koozie">
                         <drink 
                             class="drink caffine fa fa-coffee cursor-pointer float-left"
-                            data-drink='{
-                                "name": "coffee", 
-                                "strength": -1
-                            }'
-                            id="coffee" 
+                            data-drink='{ "name": "coffee", "strength": -1 }'
                         ></drink>
                     </div>
                 </div>
